2009-04-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Refactor out GetRootKey method from MapRawKeys. It's
	  currently only used on the Mac platform but could be used by
	  others. Also cache the mappings.

2009-04-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Remwork raw key remapping code. Decompose the real keys
	  behind the Mac's alt-composed chars.

	* MonoDevelop.Components.Commands/CommandManager.cs: Track
	  KeyBindingManager API.

2009-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands.ExtensionNodes/CommandCodon.cs:
	  Add macShortcut property to commands, and use it as the
	  shortcut when on Mac.

	* MonoDevelop.Components.Commands.ExtensionNodes/SchemeExtensionNode.cs:
	  Add forMac property for flagging whether keybinding schemes
	  are for the Mac. Close streams correctly.

	* MonoDevelop.Components.Commands/KeyBindingService.cs: Use
	  schemes' new IsForMac property. Store bindings in
	  KeyBindingsMac.xml when on Mac so that user can have
	  side-by-side Mac and !Mac bindings.

2009-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Use
	  PropertyService.IsMac. Hide IsMac property.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Components.csproj: don't require specific
	gtk-sharp version.

2009-04-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Restore concise (Ctrl/Control) display label.

2009-04-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Fix
	  alt modifier mapping.

2009-04-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Fix
	  GTK 2.8 build.

2009-04-15  Michael Hutchinson  <mhutchinson@novell.com>
